hledger/test/errors/csviftablenonempty.csv.rules
# no (indented) rules following if table
if,date,description,comment
